# aeris

./: .gitignore  README.md  pyproject.toml
.github/workflows/: publish.yml
aeris/: __init__.py  aeris.py  cli.py  config.py
aeris/database/: engine.py  models.py
aeris/web/: main.py
aeris/web/static/: styles.css
aeris/web/templates/: base.html  index.html
aeris/web/templates/partials/: note_detail.html  note_form.html  note_list.html
